--- a/FoodCollector/FCActivityCenterTVSectionHeader.xib
+++ b/FoodCollector/FCActivityCenterTVSectionHeader.xib
@@ -7,16 +7,16 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="FCActivityCenterTVCSectionHeader" customModule="FoodCollector" customModuleProvider="target">
+        <view autoresizesSubviews="NO" contentMode="scaleToFill" id="iN0-l3-epB" customClass="FCActivityCenterTVCSectionHeader" customModule="FoodCollector" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="600" height="80"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9sI-xM-EMM">
-                    <rect key="frame" x="5" y="20" width="590" height="40"/>
-                    <color key="backgroundColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
-                    <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
+                <view autoresizesSubviews="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9sI-xM-EMM">
+                    <rect key="frame" x="0.0" y="20" width="600" height="40"/>
+                    <color key="backgroundColor" red="0.29803922772407532" green="0.29803922772407532" blue="0.29803922772407532" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                 </view>
-                <imageView autoresizesSubviews="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fcQ-ic-icR">
+                <imageView autoresizesSubviews="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fcQ-ic-icR">
                     <rect key="frame" x="532" y="15" width="50" height="50"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="50" id="Dhy-re-rOY"/>
@@ -26,7 +26,7 @@
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rs4-0y-2GW">
                     <rect key="frame" x="8" y="30" width="516" height="19"/>
                     <fontDescription key="fontDescription" name="ArialHebrew" family="Arial Hebrew" pointSize="17"/>
-                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
@@ -39,7 +39,7 @@
                 <constraint firstItem="9sI-xM-EMM" firstAttribute="centerY" secondItem="fcQ-ic-icR" secondAttribute="centerY" id="RgK-6j-cyb"/>
                 <constraint firstItem="9sI-xM-EMM" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="20" id="W3M-nW-rla"/>
                 <constraint firstItem="fcQ-ic-icR" firstAttribute="leading" secondItem="Rs4-0y-2GW" secondAttribute="trailing" constant="8" symbolic="YES" id="fhI-1B-EAZ"/>
-                <constraint firstItem="9sI-xM-EMM" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="5" id="jU3-Vh-QEE"/>
+                <constraint firstItem="9sI-xM-EMM" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="jU3-Vh-QEE"/>
                 <constraint firstItem="fcQ-ic-icR" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="15" id="ook-pL-jOO"/>
                 <constraint firstItem="fcQ-ic-icR" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="v0F-tf-dMG"/>
             </constraints>
