--- a/FoodCollector/Base.lproj/Main.storyboard
+++ b/FoodCollector/Base.lproj/Main.storyboard
@@ -687,8 +687,15 @@
                                                 <action selector="dissmissNewPublicationViewAction:" destination="0ZZ-OS-eix" eventType="touchUpInside" id="rTd-IY-zDf"/>
                                             </connections>
                                         </button>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="שיתוף חדש" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FjY-js-UK8">
+                                            <rect key="frame" x="212" y="104" width="80" height="17"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <color key="textColor" red="0.96470594409999999" green="0.43921571970000001" blue="0.0" alpha="1" colorSpace="deviceRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                     </subviews>
                                     <constraints>
+                                        <constraint firstItem="bYi-G0-JPi" firstAttribute="centerX" secondItem="FjY-js-UK8" secondAttribute="centerX" id="0Yn-Sk-D6s"/>
                                         <constraint firstItem="6de-z3-7Uw" firstAttribute="baseline" secondItem="TWY-aL-RAk" secondAttribute="firstBaseline" id="3ew-lh-oiW"/>
                                         <constraint firstItem="bYi-G0-JPi" firstAttribute="top" secondItem="GDc-TM-bLR" secondAttribute="top" constant="10" id="3jB-pm-Etj"/>
                                         <constraint firstItem="bYi-G0-JPi" firstAttribute="leading" secondItem="j9e-1d-Zhx" secondAttribute="trailing" constant="8" symbolic="YES" id="4rQ-xv-hes"/>
@@ -697,6 +704,7 @@
                                         <constraint firstAttribute="bottom" relation="lessThanOrEqual" secondItem="j9e-1d-Zhx" secondAttribute="bottom" constant="97" id="AFw-L5-vUE"/>
                                         <constraint firstAttribute="bottom" secondItem="bYi-G0-JPi" secondAttribute="bottom" constant="38" id="Bqo-z2-tgS"/>
                                         <constraint firstItem="bYi-G0-JPi" firstAttribute="centerY" secondItem="GDc-TM-bLR" secondAttribute="centerY" constant="-14" id="Br7-m1-n9P"/>
+                                        <constraint firstItem="FjY-js-UK8" firstAttribute="top" secondItem="bYi-G0-JPi" secondAttribute="bottom" constant="14" id="Dv1-pD-rzJ"/>
                                         <constraint firstItem="6de-z3-7Uw" firstAttribute="top" relation="greaterThanOrEqual" secondItem="Kmr-Qw-WMT" secondAttribute="bottom" constant="10" id="EBN-Bc-LPE"/>
                                         <constraint firstItem="6de-z3-7Uw" firstAttribute="top" secondItem="TWY-aL-RAk" secondAttribute="top" id="TRQ-w7-z5v"/>
                                         <constraint firstItem="6de-z3-7Uw" firstAttribute="top" relation="lessThanOrEqual" secondItem="Kmr-Qw-WMT" secondAttribute="bottom" constant="84" id="W7d-dw-pb5"/>
@@ -706,6 +714,7 @@
                                         <constraint firstItem="6de-z3-7Uw" firstAttribute="leading" relation="lessThanOrEqual" secondItem="TWY-aL-RAk" secondAttribute="trailing" constant="28" id="abT-E6-oVN"/>
                                         <constraint firstItem="Kmr-Qw-WMT" firstAttribute="leading" secondItem="j9e-1d-Zhx" secondAttribute="leading" id="au5-vi-PPn"/>
                                         <constraint firstItem="bYi-G0-JPi" firstAttribute="leading" secondItem="6de-z3-7Uw" secondAttribute="trailing" constant="8" symbolic="YES" id="mA4-YX-Edt"/>
+                                        <constraint firstItem="bYi-G0-JPi" firstAttribute="width" secondItem="FjY-js-UK8" secondAttribute="width" id="nI6-yN-Ry6"/>
                                         <constraint firstAttribute="trailing" secondItem="bYi-G0-JPi" secondAttribute="trailing" constant="8" id="nhd-vc-FTe"/>
                                         <constraint firstItem="j9e-1d-Zhx" firstAttribute="leading" secondItem="GDc-TM-bLR" secondAttribute="leadingMargin" id="pbG-Qh-gqb"/>
                                         <constraint firstItem="j9e-1d-Zhx" firstAttribute="top" secondItem="bYi-G0-JPi" secondAttribute="top" id="svm-ms-lnN"/>
@@ -809,7 +818,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2578" y="293"/>
+            <point key="canvasLocation" x="2554" y="293"/>
         </scene>
         <!--Arrived To Publication SpotVC-->
         <scene sceneID="Uot-iA-8bD">
